--- a/docs/tutorial-QGIS-TIM.qmd
+++ b/docs/tutorial-QGIS-TIM.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Tutorial QGIS-TimML <br> *[under construction]*"
+title: "Tutorial QGIS-Tim <br> *[under construction]*"
 output-dir: ../_build
 format: html
 mainfont: Arial
@@ -8,29 +8,26 @@ mainfont: Arial
 
 ## Requirements
 - Be sure QGIS 3.22.00 or higher is installed. 
-- The installation of the necessary QGIS-TIMML plugin is part of this Tutorial. 
-- Download the tutorial material. [Follow this link.](https://deltares.thegood.cloud/s/MB94b7mLmpgNcbj).
+- The installation of the necessary QGIS-TIM plugin is part of this Tutorial. 
+- Download the tutorial material. [Follow this link.](https://deltares.thegood.cloud/s/MB94b7mLmpgNcbj)
 
 ## Description
 In this tutorial, you will learn how to:
 
-- install the Qgis-Tim plugin;
+- install the QGIS-Tim plugin;
 - use the basic of QGIS;
-- create a steady state and transient model in TIMML; 
+- create a steady state (TimML) and transient model (TTim); 
 - analyse the results;
 - run scenario's.
 
 # Objective
-With the basic experience from this tutorial and the online documentation on TIM you are able to use TTIM in your daily work.
+With the basic experience from this tutorial and the online documentation on TIM you are able to use TIM in your daily work.
 
 # Introduction case *Rijsenhout*
 In one of the fields west of Rijsenhout industrial activities are planned, the construction of glass houses. From historical sources it is known that some bombs from World War 2 are still in the subsoil. Before building starts, these bombs are removed for safety reasons. The contractor plans to drill sheet piles for a closed building pit. Inside the pit, the excavation will take place, the groundwater level is lowerd with a set of wells just in the top of the aquifer. All drain water is infiltrated over a strech of wells near the existing buildings.  
 On the project location the top layer is 12 m thick and consist of low permeable combination of clay and peat. Below this toplayer we find an aquifer of 50 m. The Westeinderplassen, a lake system with a depth of 3 m., is located East of the project area. 
 
 ![Verticale Doorsnede BRO GeoTOP v1.4.1](figures/tutorial/GeoTOP-Verticaledoorsnede.png){width=100% #fig-GeoTOP-Verticaledoorsnede}
-
-![Lifting the World War II bomb / crosssection ](figures/tutorial/photo-fieldwork-liftbomb-crosssection.jpg){width=100% #fig-photo-fieldwork-liftbomb-crosssection}
-
 
 # Getting Started 
 (@) Launch QGIS from your START menu, your desktop or click on
@@ -61,7 +58,7 @@ The case in this turotial is located in the The Netherlands, so next we select t
 ### Install plugins
 This is the moment to download/import four plugins needed for this tutorial:
 
-- the TIM plugin. The development version imported from ZIP file.
+- the QGIS-TIM plugin. The development version imported from ZIP file.
 - the iMOD plugin. The development version imported from ZIP file.
 - the Value Tool. The official version installed via QGIS. 
 - the PDOK plugin. The official version installed via QGIS. This plugin gives access to a large database from which we will load the topographic maps and use the navigation option.
@@ -70,7 +67,7 @@ This is the moment to download/import four plugins needed for this tutorial:
 (@) On the left, section select *Install from ZIP*.
 (@) Click the Browse button (![](figures/tutorial/button-Qgis-browse.png){width=4%}) and from the tutorial dataset select the ZIP file "TIM-tutorial\\imod-plugin.zip". 
 (@) Click *Install Plugin*.
-(@) In the same way, install the QGIS-TIM plugin using the ZIP file "TIM-tutorial\\TIM-plugin.zip". 
+(@) In the same way, install the QGIS-Tim plugin using the ZIP file "TIM-tutorial\\TIM-plugin.zip". 
 (@) From the left section, select the group *All* to see all available plugins. 
 (@) Search for “PValue Tool” and install it. 
 (@) Search for “PDOK services plugin” and install it. 
@@ -80,7 +77,7 @@ This is the moment to download/import four plugins needed for this tutorial:
 See in the toolbar section of QGIS that the plugin are installed: 
 
 - iMOD Toolbar ![](figures/tutorial/button_iMOD-Toolbar.png){width=30%} 
-- QGIS-TimML ![](figures/tutorial/button-Qgis-tim.png){width=4%}
+- QGIS-Tim ![](figures/tutorial/button-Qgis-tim.png){width=4%}
 - Value Tool ![](figures/tutorial/button_valuetool.png){width=4%}
 - PDOK Services Plugin ![](figures/tutorial/button-PDOK.png){width=4%}
 
@@ -107,12 +104,12 @@ Let's now open a shape file containing the locations and depths of the bombs.
 (@) You can zoom in and out with the scroll button on your mouse or navigate with the buttons in the main menu: ![](figures/tutorial/button_zoom-menu.png){width=40%}
 (@) Use ![](figures/tutorial/button_zoomPan.png){width=4%} to pan the map with your left mouse button and use ![](figures/tutorial/button_zoomtolayer.png){width=4%} to zoom to the extend of the layers/groups selected in the *Layers* panel.
 
-### Start your TimML model
+## Start your Tim model  
 Now we are ready to activate the QGIS-Tim plugin. 
 
-(@) Click on the QGIS-Tim plugin button (![](figures/tutorial/button-Qgis-tim.png){width=4%}) and the TimML panel appears, see also @fig-Panel-TimML.
+(@) Click on the QGIS-Tim plugin button (![](figures/tutorial/button-Qgis-tim.png){width=4%}) and the QGIS-Tim panel appears, see also @fig-Panel-QGIS-Tim.
 
-![QGIS-TimML panel](figures/tutorial/Panel-TimML.png){width=70% #fig-Panel-TimML}
+![QGIS-Tim panel](figures/tutorial/Panel-QGIS-Tim.png){width=70% #fig-Panel-QGIS-Tim}
 
 (@) Goto the tab *GeoPackage*. <br> Here we will create an empyt database (geopacakge) to store all elements and parameters for the model. 
 (@) Click the *New* button to create the GeoPackage and save it for instance in the folder with your training data "..\\TIM-Training\\dbase\\geopackage\\case-Rijsenhout.gpkg".
@@ -122,11 +119,11 @@ If you had no introduction to the TIM plugin, read the Intermezzo below for a ge
 
 ---
 
-> **Interemezzo:** *introduction Tabs on the TimML panel* 
+> **Interemezzo:** *introduction Tabs on the TIM panel* 
 > 
 > a. Extract: open an existing 3d geoydrologcal model (NC file) and extract the data for your project area. 
-> a. GeoPackage: an overview of the elements in you geopackage. In case you switch to transient modelling, an extra column with ttim elements is added. 
-> a. Elements: a list of 12 TimML elements from which you can build your model. 
+> a. GeoPackage: an overview of the elements in you geopackage. In case you switch to transient modelling, an extra column with *ttim* elements is added. 
+> a. Elements: a list of 12 TIM elements from which you can build your model. 
 > a. Compute: here you can define your domain and cell size, decide if your model is transient or not and change the output name. 
 
 ---
@@ -138,41 +135,48 @@ Let us save this project to be able to return to it later or in case of a crash 
 Now we are ready to define our first steady state model by parameterizing our Aquifer. <br>
 **NB.** All the editing of the parameter and elements we do in your geopackage in the *Layers* panel on the left!   
 
+***Model 1: single aquifer*** <br>
+We start with a very simple 'model', only the parameters of a single aquifer. 
+
 (@) In your geopackage select the layer "timml Aquifer:Aquifer" and click your right mouse button.
-(@) Form the menu select *Attribute Tabel* and the table opens in a new window. 
+(@) From the menu select *Attribute Tabel* and the table opens in a new window. 
 (@) Start the editing mode with a click on the *Toggle Edditing Mode* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%}).
-(@) Add a new feature with the *Add feature* button (![](figures/tutorial/button-Qgis-AttributeTable-AddFeature.png){width=4%}). in this case a feature is a hydrological layer. 
+(@) Add a new feature with the *Add feature* button (![](figures/tutorial/button-Qgis-AttributeTable-AddFeature.png){width=4%}). In this case a feature is a hydrological layer. 
 (@) Fill the feature with the values from the table below: 
 
 | parameter  | value |  
 |---          |---    |
-| Layer       | 0     |  
+| Layer       | 0*     |  
 | aquifer_k   | 5     |
 | aquifer_top | -10   | 
 | aquifer_top | -30   |
 
+\* **NB!** In de real world we always start counting with 1. However, TIM is programmed in Python and in Python couting starts with 0. 
+
 (@) Save all changes with the *Save Edits* button (![](figures/tutorial/button-Qgis-AttributeTable-SaveEdits.png){width=4%}).
 (@) Stop the *Edditing Mode* with a click on the button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%}).
 (@) Close the *Attribute Table* window.
-(@) Go to the tab *compute* in TimML.
+(@) Go to the tab *compute* in QGIS-Tim.
 (@) Click the button *Set to current extent*.
 (@) Start the calculation with a click on *Compute*.
 (@) Minimize the python.exe window. 
 
-After the calculation you see that the result is added to the geopackage as a mesh and raster layer. Although the layers are checked, the data is not visible. That is because the GeoPackage was added last, and QGIS adds layers at the and of the list. Let's move the layer "pastel" toe the background. 
+After the calculation you see that the result is automatically added to the geopackage, both as a mesh and raster layer. Although these layers are checked, the data is not visible. That is because the GeoPackage was added last, and QGIS adds layers at the and of the list. Let's move the layer "pastel" to the background. 
 
 (@) Select the layer "pastel" and drag it with your left mouse button to the bottom of the list of layers.
 
-The calculation result is now visable and we see a raster with just the value 0, not a very exiting result. Let's now add a well element.
+The calculation result is now visable and we see a raster with just the value 0, not a very exiting result because no other elements are present yet. Let's now add a well element.
 
-(@) First hide the output layers by deselecting the raster and mesh layers.
-(@) Goto the tab *Elements* in TimML.
-(@) Click on "Well"
+***Model 2: single well***  
+
+(@) First hide the output layers by deselecting both the rasters (case-Rijsenhout-output:raster) and meshes (case-Rijsenhout-output:mesh).
+(@) Goto the tab *Elements* in QGIS-Tim.
+(@) Click on the element "Well".
 (@) Give the layer a name, e.g. "DewateringWell".
 
-See that this layer is added to the timml sub-group in your geopackage with 'point' geometry. Also in the ttim sub-group an element with the same name is added. This is a tabel that can store transient well data while refering to the x/y locations in the timml layer. Next step is to add the well with its parameters.  
+See that layer "timml Well:DewateringWell" is added to the timml sub-group in your geopackage with 'point' as geometry. Also in the ttim sub-group an element with the same name is added. This is a tabel that can store transient well data while refering to the x/y locations in the timml layer. Next step is to add the actual wel, both the location and its parameters.  
 
-(@) Select the layer "timml Well:DewateringWell"
+(@) Select the layer "timml Well:DewateringWell".
 (@) Click your right mouse button and select the *Toggle Edditing Mode* (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%}).
 (@) To add a new well (feature) to the layer click the *Add Point Feature* button (![](figures/tutorial/button_AddPointFeature.png){width=4%}).
 (@) With your mouse, click on a location just outside the group of bombs. 
@@ -181,16 +185,16 @@ See that this layer is added to the timml sub-group in your geopackage with 'poi
 ![](figures/tutorial/Figure_FeatureAttributes.png){width=50%}
 
 (@) Click *OK*.
-(@) Click the *Toggle Editing* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png){width=4%}) and if you are asked to save changes select *Save*. <br> An alternative way to save your edits is to click the *Save Layer Edits* button (![](figures/tutorial/button_SavelayerEdits.png){width=4%} and that stop editing with the *Toggle Editing* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png){width=4%}).
+(@) Click the *Toggle Editing* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png){width=4%}) and if you are asked to save changes select *Save*. <br> An alternative way to save your edits is to click the *Save Layer Edits* button (![](figures/tutorial/button_SavelayerEdits.png){width=4%} and than stop editing with the *Toggle Editing* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png){width=4%}).
 
 Next step is to rerun the model including the new well. 
 
-(@) In TimML go to the tab GeoPackge and see that the Well is added.
+(@) In QGIS-Tim go to the tab GeoPackge and see that the Well is added.
 (@) Go to the tab *Compute* and click on *Compute*.
 
 The output in your Geopackage is directely overwritten with the new results.  
 
-(@) Unhide the output layer, probably named "case-Rijsenhout-head_layer_0".
+(@) Unhide the output layer voor ratser, probably named "case-Rijsenhout-output:raster".
 
 Do you like to see the values of the calculated Head under you mouse?
 
@@ -219,7 +223,6 @@ Your screen might look like @fig-figure_HeadsInCrossection01.
 
 ![Cross section with calculated Head](figures/tutorial/figure_HeadsInCrossection01.png){width=100% #fig-figure_HeadsInCrossection01}
 
-
 ---
 
 > **Intermezzo:** introduction main QGIS features (optional)  
@@ -243,27 +246,47 @@ Your screen might look like @fig-figure_HeadsInCrossection01.
 > - Add a new row in the table with the *Add feature* button (![](figures/tutorial/button-Qgis-AttributeTable-AddFeature.png){width=4%}).
 > - Save all changes with the *Save Edits* button (![](figures/tutorial/button-Qgis-AttributeTable-SaveEdits.png){width=4%}).
 > - Close the *Attribute Table* window.
- 
 
 ---
 
+***Model 3: multiple layers*** <br>
+A single aquifer is of course not enough to describe the geology of our project area. A simplyfication of the geology is given in de cross section in @fig-photo-fieldwork-liftbomb-crosssection. There is the Holocen toplayer with a resistance of 1500 days on top of an aquifer with a horizontal permeability of 30 m/d and a thickness of 50 m. The anisotropy factor is 3 resulting in a vertical resistance of 0.1 day per meter. TIM can handle multiple layers so the next step is to bring these parameters into the model.  
+
+![Project area cross section / lifting the World War II bomb.](figures/tutorial/photo-fieldwork-liftbomb-crosssection.jpg){width=100% #fig-photo-fieldwork-liftbomb-crosssection}
+
+(@) In your geopackage select the layer "timml Aquifer:Aquifer" and click your right mouse button.
+(@) From the menu select *Attribute Tabel* and the table opens in a new window. <br> **NB** Alternatief is to press Shift + F6 or use the button *Open Attrribute Tabel* (![](figures/tutorial/button-Qgis-OpenAttributeTabel.png){width=4%}).
+(@) Our existing single aquifer seems to be gone... That is not the case but a nasty habit of QGIS. To show the aquifer, click on the button ![](figures/tutorial/button_ShowSelectedFeatures.png){width=20%} on the bottom of the table and select *Show All Features*.
+(@) Start the editing mode with a click on the *Toggle Edditing Mode* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%}).
+(@) Add 3 extra aquifers / features with the *Add feature* button (![](figures/tutorial/button-Qgis-AttributeTable-AddFeature.png){width=4%}).  
+
+The Holoceen toplayer is not a distinguished layer but a resistance on top of layer 0.  
+
+(@) Fill the features with the values from the table below: 
+
+|fid|layer|aquitard_c|aquifer_k|aquifer_top|aquifer_bottom|semiconf_top|semiconf_head|
+|---|---|---|---|---|---|---|---|
+|1|0|1500|0.01|-17|-22|-5|-6|
+|2|1|0.5|30|-22|-27|NULL|NULL|
+|3|2|1.25|30|-27|-47|NULL|NULL|
+|4|3|2|30|-47|-67|NULL|NULL|
+
+(@) Go to the tab *Compute* and run the new model by clicking *Compute*.
+
+
+damwand  (timml Leaky Line Doublet:damwand)
+retourbemaling (timml Line Sink Ditch:retour)
+observatie (timml Observation:peilbuizen)
 
 snapping moet aan
-als je IPF met uitvoer bekijkt, laten zien dat er klopje bij zit en dus tijdsafhankelijk
+als je IPF met uitvoer bekijkt, laten zien dat er knopje bij zit en dus tijdsafhankelijk
 beschrijven  hoe ID geometry gekoppeld is met tabel WEL invoer..... 
 
-steady state:
-* stap 1  onttrekking
-* stap 2  danmwand
-* stap 3 onderverdeling meerlaags
 tijd wordt ingevuld, alleen naar kijken
 NB discussie specific yield / storage goed in manual toelichten.....
-observatie wordt ingevuld, alleen naar kijken
 verschil in grids: gebruik Raster Calculator 
 NB  geopackage wordt altijd automatisch gesaved als je shape bewaart. wellicht proberen: alles verwijderen en dan opnieuw inlezen. 
 nb  show all features moet vaak aan....
-
-
 
 
 (@) Stap 1: 1 wvp, 1 put met filter die gehele laag doorsnijdt
@@ -290,7 +313,6 @@ nb  show all features moet vaak aan....
 (@) Stap 9: wat als de putten uitvallen?
 
 
-
-case 1 alleen steady state
+Case 1 alleen steady state
 tijdsafhankelijk in case 2 (stad)
 
